# transfer-learning

./: .gitignore  README.md
computer_vision/classification_from_scratch/: cnn_classifier.ipynb  cnn_human_action.ipynb  cnn_human_action2.ipynb  pyproject.toml
computer_vision/classification_transfer_learning/: cnn_transfer_learning.ipynb
computer_vision/classification_with_vgg/: vgg_human_action.ipynb
natural_language/text_classification_from_scratch/: rnn_text_classification.ipynb
natural_language/text_classification_with_bert/: BERT_email_classification.ipynb  bert_text_classification.ipynb
transfer-learning/computer_vision/classification_with_vgg/: vgg_human_action.ipynb
